@@ -52,7 +52,7 @@ class CategoriesPage extends QueryPage {
 	function formatResult( $skin, $result ) {
 		$title = Title::makeTitle( NS_CATEGORY, $result->title );
 		$plink = $skin->makeLinkObj( $title, $title->getText() );
-		$nlinks = wfMsg( 'nlinks', $result->count );
+		$nlinks = wfMsg( 'members', $result->count );
 		return wfSpecialList($plink, $nlinks);
 	}
 }
